--- a/index.css
+++ b/index.css
@@ -201,3 +201,50 @@ p {
 .database {
     background-image: url('./res/database.png');
 }
+
+@media (max-width: 768px) {
+    .preview {
+        width: 100%;
+        background-size: cover;
+        height: 60vh;
+    }
+
+    * {
+        font-size: medium;
+    }
+
+    .title {
+        font-size: 40px;
+    }
+
+    .get-started {
+        width: 100%;
+    }
+
+    .item .icon {
+        height: 15vh;
+        width: 15vh;
+        margin-top: -30px;
+    }
+
+
+    .whats-dishy {
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .what-info {
+        width: 100%;
+        margin: 0;
+    }
+
+    .omelet,
+    .database {
+        visibility: hidden;
+    }
+
+    .what-info.right {
+        margin-right: 0;
+        margin: 0;
+    }
+}
